cmake_minimum_required(VERSION 3.16)
project(аlgorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(${PROJECT_NAME}_1 hw1.cpp)

add_executable(${PROJECT_NAME}_2 hw2.cpp)

add_executable(${PROJECT_NAME}_3 hw3.cpp)

add_executable(${PROJECT_NAME}_4 hw4.cpp)

add_executable(${PROJECT_NAME}_5 hw5.cpp)

add_executable(${PROJECT_NAME}_6 hw6.cpp)

add_executable(${PROJECT_NAME}_7 hw7.cpp)

add_executable(${PROJECT_NAME}_8 hw8.cpp)

add_executable(${PROJECT_NAME}_9 hw9.cpp)

add_executable(${PROJECT_NAME}_10 hw10.cpp)

add_executable(${PROJECT_NAME}_11 hw11.cpp)

add_executable(${PROJECT_NAME}_12 hw12.cpp)

add_executable(${PROJECT_NAME}_13 hw12.cpp)
